--- a/package.json
+++ b/package.json
@@ -3,22 +3,23 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "rxjs": "6.6.3",
-    "tslib": "^2.0.0",
-    "zone.js": "0.10.3",
-    "@types/node": "12.12.62",
+    "@angular/animations": "10.1.3",
     "@angular/cdk": "10.2.3",
-    "@angular/core": "11.2.6",
-    "@angular/forms": "11.2.6",
-    "@types/jasmine": "~3.6.0",
-    "@angular/common": "11.2.6",
-    "@angular/router": "11.2.6",
-    "@angular/compiler": "11.2.6",
-    "@angular/material": "10.2.3",
+    "@angular/common": "10.1.3",
+    "@angular/compiler": "~10.0.3",
+    "@angular/core": "10.1.3",
+    "@angular/forms": "10.1.3",
+    "@angular/material": "^9.1.2",
+    "@angular/platform-browser": "10.1.3",
+    "@angular/platform-browser-dynamic": "10.1.3",
+    "@angular/router": "10.1.3",
+    "@types/jasmine": "3.5.14",
     "@types/jasminewd2": "2.0.8",
-    "@angular/animations": "11.2.6",
-    "@angular/platform-browser": "11.2.6",
-    "@angular/platform-browser-dynamic": "11.2.6"
+    "@types/node": "12.12.62",
+    "i": "^0.3.6",
+    "rxjs": "6.6.3",
+    "tslib": "2.0.1",
+    "zone.js": "0.10.3"
   },
   "scripts": {
     "ng": "ng",
@@ -29,24 +30,36 @@
     "e2e": "ng e2e"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.5",
-    "@angular/cli": "~11.2.5",
-    "@angular/compiler-cli": "~11.2.6",
-    "@angular/language-service": "~11.2.6",
-    "@types/node": "^12.11.1",
+    "@angular-devkit/build-angular": "~0.901.1",
+    "@angular/cli": "^10.2.3",
+    "@angular/compiler-cli": "~9.1.1",
+    "@angular/language-service": "~10.0.3",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~4.4.1",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
+    "karma-coverage-istanbul-reporter": "~2.1.0",
+    "karma-jasmine": "~3.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.5"
-  }
+    "typescript": "~3.8.3"
+  },
+  "description": "[Edit on StackBlitz ⚡️](https://stackblitz.com/edit/github-4vajky-yhcdbv)",
+  "main": "karma.conf.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AnaLinsDev/pratica-pwebI-03.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/AnaLinsDev/pratica-pwebI-03/issues"
+  },
+  "homepage": "https://github.com/AnaLinsDev/pratica-pwebI-03#readme"
 }
